@@ -50,11 +50,11 @@ header <- c(
 "\\\\usepackage{Rd}",
 "\\\\begin{document}",
 "\\\\HeaderA{test}{}{test}",
-"\\\\begin{Details}\\relax",
+"\\\\begin{Details}\\\\relax",
 "\\\\Tabular{cccccccccccccccc}{")
 trailer <- c("}", "\\\\end{Details}", "\\\\end{document}")
 writeLines(header, con)
-writeLines(paste0(xx, "\\\\"), con)
+writeLines(paste0(xx, "\\\\\\\\"), con)
 writeLines(trailer, con)
 close(con)
 ## and some UTF_8 chars
@@ -69,7 +69,7 @@ xx[] <- encoded_text_to_latex(x, "UTF-8")
 xx <- apply(xx, 1, paste, collapse = "&")
 con <- file("test-utf8.tex", "w")
 writeLines(header, con)
-writeLines(paste(xx, "\\\\", sep = ""), con)
+writeLines(paste(xx, "\\\\\\\\", sep = ""), con)
 writeLines(trailer, con)
 close(con)
 }}
